2005-10-06  Erez Zadok  <ezk@cs.sunysb.edu>

	* libamu/wire.c (print_wires): convert argument-less xsnprintf to
	xstrlcpy.

	* include/am_utils.h: use new HAVE_C99_VARARGS_MACROS or
	HAVE_GCC_VARARGS_MACROS to pass file name and line number to
	xsnprintf/xvsnprintf.

	* libamu/strutil.c (xsnprintf, xvsnprintf): if debugging is on,
	then also print the source file name and line number that called
	xsnprintf/xvsnprintf with a buffer that wasn't large enough (most
	likely an am-utils bug).

	* Makefile.am (EXTRA_DIST_M4): distribute new
	check_varargs_macros.m4 file.

	* configure.in: execute new AMU_VARARGS_MACROS test.

	* m4/macros/check_varargs_macros.m4: new test to check what style
	of variable-length argument macros, if any, does the
	compiler/pre-processor supports.

	* conf/autofs/autofs_solaris_v2_v3.c (autofs_lookup_2_req)
	conf/autofs/autofs_solaris_v1.c (autofs_mount_1_req), amd/opts.c,
	amd/nfs_subr.c (nfsproc_lookup_2_svc), amd/nfs_start.c
	(mount_automounter), amd/get_args.c (get_args), amd/amfs_toplvl.c,
	amd/amfs_auto.c (amfs_auto_mount), amd/amd.h, amd/amd.c (main):
	use sizeof() instead of fixed SIZEOF_* macros.

	* libamu/strutil.c (xstrlcat, xstrlcpy), include/am_utils.h
	(DEBUG): if debugging is on, then also print the source file name
	and line number that called xstrl* with a buffer that wasn't large
	enough (most likely an am-utils bug)

	* include/am_compat.h (INADDR_NONE): define in a common location,
	if OS doesn't have it, use 0xffffffffU which should work with any
	ANSI compiler.

	* fixmount/fixmount.c, libamu/wire.c: remove local definition of
	INADDR_NONE.

	* amd/amfs_toplvl.c (amfs_toplvl_mount), amd/amfs_auto.c
	(amfs_auto_mount): use common SIZEOF_OPTS in definition and call
	to autofs_get_opts.

	* amd/amd.h (SIZEOF_OPTS): moved #define to common header.

2005-10-06  Rainer Orth  <ro@TechFak.Uni-Bielefeld.DE>

	* amd/opts.c (expand_op): Need to check BUFSPACE for env for
	vlen+1.  Likewise for cp and strlen(cp)+1.
